log/build_2024-04-15_10-41-01/uav_tf2_test/stdout_stderr.log
-- The C compiler identification is GNU 9.4.0
-- The CXX compiler identification is GNU 9.4.0
-- Check for working C compiler: /usr/lib/ccache/cc
-- Check for working C compiler: /usr/lib/ccache/cc -- works
-- Detecting C compiler ABI info
-- Detecting C compiler ABI info - done
-- Detecting C compile features
-- Detecting C compile features - done
-- Check for working CXX compiler: /usr/lib/ccache/c++
-- Check for working CXX compiler: /usr/lib/ccache/c++ -- works
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found ament_cmake: 1.1.6 (/opt/ros/galactic/share/ament_cmake/cmake)
-- Found PythonInterp: /usr/bin/python3 (found suitable version "3.8.10", minimum required is "3") 
-- Using PYTHON_EXECUTABLE: /usr/bin/python3
-- Found geometry_msgs: 2.2.4 (/opt/ros/galactic/share/geometry_msgs/cmake)
-- Using all available rosidl_typesupport_c: rosidl_typesupport_fastrtps_c;rosidl_typesupport_introspection_c
-- Found rosidl_adapter: 2.2.3 (/opt/ros/galactic/share/rosidl_adapter/cmake)
-- Found OpenSSL: /usr/lib/x86_64-linux-gnu/libcrypto.so (found version "1.1.1f")  
-- Found FastRTPS: /opt/ros/galactic/include  
-- Using all available rosidl_typesupport_cpp: rosidl_typesupport_fastrtps_cpp;rosidl_typesupport_introspection_cpp
-- Found rclcpp: 9.2.2 (/opt/ros/galactic/share/rclcpp/cmake)
-- Found rmw_implementation_cmake: 3.3.1 (/opt/ros/galactic/share/rmw_implementation_cmake/cmake)
-- Found rmw_cyclonedds_cpp: 0.22.6 (/opt/ros/galactic/share/rmw_cyclonedds_cpp/cmake)
-- Using RMW implementation 'rmw_cyclonedds_cpp' as default
-- Looking for pthread.h
-- Looking for pthread.h - found
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Failed
-- Looking for pthread_create in pthreads
-- Looking for pthread_create in pthreads - not found
-- Looking for pthread_create in pthread
-- Looking for pthread_create in pthread - found
-- Found Threads: TRUE  
-- Found tf2: 0.17.5 (/opt/ros/galactic/share/tf2/cmake)
-- Found tf2_ros: 0.17.5 (/opt/ros/galactic/share/tf2_ros/cmake)
-- Found ament_lint_auto: 0.10.7 (/opt/ros/galactic/share/ament_lint_auto/cmake)
-- Added test 'copyright' to check source files copyright and LICENSE
-- Added test 'cppcheck' to perform static code analysis on C / C++ code
-- Configured cppcheck include dirs: 
-- Configured cppcheck exclude dirs and/or files: 
-- Added test 'cpplint' to check C / C++ code against the Google style
-- Configured cpplint exclude dirs and/or files: 
-- Added test 'lint_cmake' to check CMake code style
-- Added test 'uncrustify' to check C / C++ code style
-- Configured uncrustify additional arguments: 
-- Added test 'xmllint' to check XML markup files
-- Configuring done
-- Generating done
-- Build files have been written to: /home/ccl/ros2_ws/build/uav_tf2_test
[35m[1mScanning dependencies of target camera_node[0m
[ 50%] [32mBuilding CXX object CMakeFiles/camera_node.dir/src/camera_node.cpp.o[0m
/home/ccl/ros2_ws/uav_tf2_test/src/camera_node.cpp: In lambda function:
/home/ccl/ros2_ws/uav_tf2_test/src/camera_node.cpp:32:42: error: no matching function for call to ‘rclcpp::Publisher<std_msgs::msg::String_<std::allocator<void> > >::publish(geometry_msgs::msg::Pose_<std::allocator<void> >&)’
   32 |         this->publisher_->publish(message);
      |                                          ^
In file included from /opt/ros/galactic/include/rclcpp/topic_statistics/subscription_topic_statistics.hpp:31,
                 from /opt/ros/galactic/include/rclcpp/subscription.hpp:50,
                 from /opt/ros/galactic/include/rclcpp/any_executable.hpp:25,
                 from /opt/ros/galactic/include/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/galactic/include/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/galactic/include/rclcpp/executor_options.hpp:20,
                 from /opt/ros/galactic/include/rclcpp/executor.hpp:36,
                 from /opt/ros/galactic/include/rclcpp/executors/multi_threaded_executor.hpp:26,
                 from /opt/ros/galactic/include/rclcpp/executors.hpp:21,
                 from /opt/ros/galactic/include/rclcpp/rclcpp.hpp:156,
                 from /home/ccl/ros2_ws/uav_tf2_test/src/camera_node.cpp:5:
/opt/ros/galactic/include/rclcpp/publisher.hpp:187:3: note: candidate: ‘void rclcpp::Publisher<MessageT, AllocatorT>::publish(std::unique_ptr<MessageT, typename std::conditional<std::is_same<typename std::allocator_traits<typename std::allocator_traits<_Alloc>::rebind_traits<MessageT>::allocator_type>::rebind_alloc<MessageT>, typename std::allocator<void>::rebind<_Tp1>::other>::value, std::default_delete<_Tp>, rclcpp::allocator::AllocatorDeleter<typename std::allocator_traits<_Alloc>::rebind_traits<MessageT>::allocator_type> >::type>) [with MessageT = std_msgs::msg::String_<std::allocator<void> >; AllocatorT = std::allocator<void>; typename std::conditional<std::is_same<typename std::allocator_traits<typename std::allocator_traits<_Alloc>::rebind_traits<MessageT>::allocator_type>::rebind_alloc<MessageT>, typename std::allocator<void>::rebind<_Tp1>::other>::value, std::default_delete<_Tp>, rclcpp::allocator::AllocatorDeleter<typename std::allocator_traits<_Alloc>::rebind_traits<MessageT>::allocator_type> >::type = std::default_delete<std_msgs::msg::String_<std::allocator<void> > >]’
  187 |   publish(std::unique_ptr<MessageT, MessageDeleter> msg)
      |   ^~~~~~~
/opt/ros/galactic/include/rclcpp/publisher.hpp:187:53: note:   no known conversion for argument 1 from ‘geometry_msgs::msg::Pose_<std::allocator<void> >’ to ‘std::unique_ptr<std_msgs::msg::String_<std::allocator<void> >, std::default_delete<std_msgs::msg::String_<std::allocator<void> > > >’
  187 |   publish(std::unique_ptr<MessageT, MessageDeleter> msg)
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~
/opt/ros/galactic/include/rclcpp/publisher.hpp:211:3: note: candidate: ‘void rclcpp::Publisher<MessageT, AllocatorT>::publish(const MessageT&) [with MessageT = std_msgs::msg::String_<std::allocator<void> >; AllocatorT = std::allocator<void>]’
  211 |   publish(const MessageT & msg)
      |   ^~~~~~~
/opt/ros/galactic/include/rclcpp/publisher.hpp:211:28: note:   no known conversion for argument 1 from ‘geometry_msgs::msg::Pose_<std::allocator<void> >’ to ‘const std_msgs::msg::String_<std::allocator<void> >&’
  211 |   publish(const MessageT & msg)
      |           ~~~~~~~~~~~~~~~~~^~~
/opt/ros/galactic/include/rclcpp/publisher.hpp:228:3: note: candidate: ‘void rclcpp::Publisher<MessageT, AllocatorT>::publish(const rcl_serialized_message_t&) [with MessageT = std_msgs::msg::String_<std::allocator<void> >; AllocatorT = std::allocator<void>; rcl_serialized_message_t = rcutils_uint8_array_t]’
  228 |   publish(const rcl_serialized_message_t & serialized_msg)
      |   ^~~~~~~
/opt/ros/galactic/include/rclcpp/publisher.hpp:228:44: note:   no known conversion for argument 1 from ‘geometry_msgs::msg::Pose_<std::allocator<void> >’ to ‘const rcl_serialized_message_t&’ {aka ‘const rcutils_uint8_array_t&’}
  228 |   publish(const rcl_serialized_message_t & serialized_msg)
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
/opt/ros/galactic/include/rclcpp/publisher.hpp:234:3: note: candidate: ‘void rclcpp::Publisher<MessageT, AllocatorT>::publish(const rclcpp::SerializedMessage&) [with MessageT = std_msgs::msg::String_<std::allocator<void> >; AllocatorT = std::allocator<void>]’
  234 |   publish(const SerializedMessage & serialized_msg)
      |   ^~~~~~~
/opt/ros/galactic/include/rclcpp/publisher.hpp:234:37: note:   no known conversion for argument 1 from ‘geometry_msgs::msg::Pose_<std::allocator<void> >’ to ‘const rclcpp::SerializedMessage&’
  234 |   publish(const SerializedMessage & serialized_msg)
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~
/opt/ros/galactic/include/rclcpp/publisher.hpp:248:3: note: candidate: ‘void rclcpp::Publisher<MessageT, AllocatorT>::publish(rclcpp::LoanedMessage<MessageT, AllocatorT>&&) [with MessageT = std_msgs::msg::String_<std::allocator<void> >; AllocatorT = std::allocator<void>]’
  248 |   publish(rclcpp::LoanedMessage<MessageT, AllocatorT> && loaned_msg)
      |   ^~~~~~~
/opt/ros/galactic/include/rclcpp/publisher.hpp:248:58: note:   no known conversion for argument 1 from ‘geometry_msgs::msg::Pose_<std::allocator<void> >’ to ‘rclcpp::LoanedMessage<std_msgs::msg::String_<std::allocator<void> >, std::allocator<void> >&&’
  248 |   publish(rclcpp::LoanedMessage<MessageT, AllocatorT> && loaned_msg)
      |           ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~
make[2]: *** [CMakeFiles/camera_node.dir/build.make:63: CMakeFiles/camera_node.dir/src/camera_node.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:78: CMakeFiles/camera_node.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
